# employee-churn-sentiment

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml
configs/: data_config.yaml  logging_config.yaml  model_config.yaml
docs/: model_card.md
employee_churn/: __init__.py  config.py
employee_churn/data/: __init__.py  clean.py  load.py  synthetic.py  validate.py
employee_churn/features/: __init__.py  engineer_structured.py  engineer_text.py  feature_store.py
employee_churn/models/: __init__.py  calibrate.py  dashboard.py  evaluate.py  explain.py  fairness.py  monitor.py  predict.py  registry.py  track.py  train.py
employee_churn/nlp/: __init__.py  emotion.py  preprocessing.py  sentiment.py
employee_churn/utils/: __init__.py
notebooks/: build_notebooks.py  build_walkthrough.py
notebooks/exploratory/: 01_churn_modeling_walkthrough.ipynb  02_exploratory_data_analysis.ipynb  03_modeling_and_evaluation.ipynb  04_fairness_and_explainability.ipynb  05_business_impact_and_roi.ipynb
scripts/: __init__.py  dashboard_app.py  evaluate_model.py  predict_risk.py  train_model.py
tests/: __init__.py  conftest.py  test_config.py
tests/test_data/: test_clean.py  test_synthetic.py
tests/test_features/: test_engineer_structured.py  test_engineer_text.py  test_feature_store.py  test_structured_extra.py
tests/test_models/: test_calibrate.py  test_dashboard.py  test_evaluate.py  test_explain.py  test_fairness.py  test_monitor.py  test_predict.py  test_registry.py  test_train.py  test_train_extra.py
tests/test_nlp/: test_emotion.py  test_preprocessing.py  test_sentiment.py
tests/test_scripts/: test_dashboard_app.py  test_model_cli_scripts.py
