[tool.poetry]
name = "employee-churn-sentiment"
version = "0.1.0"
description = "Employee churn prediction using HR data and sentiment analysis"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
scikit-learn = "^1.4"
xgboost = "^2.0"
nltk = "^3.8"
spacy = "^3.7"
shap = "^0.44"
mlflow = "^2.12"

[tool.poetry.dev-dependencies]
jupyterlab = "^4.0"
black = "^24.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
