[tool.poetry]
name = "employee-churn-sentiment"
version = "0.1.0"
description = "Employee churn prediction using HR data and sentiment analysis"
authors = ["Diogo Ribeiro <diogo_dj@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "employee_churn" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26"
pandas = "^2.0"
scikit-learn = "^1.4"
xgboost = "^2.0"
nltk = "^3.8"
spacy = "^3.7"
shap = "^0.44"
mlflow = ">=2.12,<4.0"
pydantic = "^2.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0"
nbformat = "^5.10"
nbconvert = "^7.16"
black = "^24.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
